--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nivo/bar": "^0.72.0",
+    "@nivo/core": "^0.72.0",
     "date-fns": "^2.22.1",
     "firebase": "^8.6.8",
     "next": "11.0.1",
