--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-firebaseui": "^5.0.2"
+    "react-firebaseui": "^5.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/gapi": "^0.0.40",
     "@types/gapi.auth2": "^0.0.55",
     "@types/gapi.calendar": "^3.0.4",
     "@types/react": "17.0.11",
+    "@types/styled-components": "^5.1.11",
+    "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.4"
