--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nivo/bar": "^0.72.0",
     "@nivo/core": "^0.72.0",
+    "antd": "^4.16.7",
     "date-fns": "^2.22.1",
     "firebase": "^8.6.8",
     "next": "11.0.1",
